# job_tracker

./: .coverage  .env  .flake8  README.md  base.py  coverage.xml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
backend/: .env  requirements.txt
backend/app/: main.py
backend/app/adapters/: gmail_simple.py
backend/app/services/: gmail_client.py
backend/credentials/: client_secret.json  token.json
backend/scripts/: test_gmail_fetch.py
backend/tests/:  test_gmail.py  test_db_and_crud.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
tests/: test_base.py
